Merge remote-tracking branch 'origin/Test' into Test
# Conflicts:
#	pom.xml
#	src/test/java/by/marketplace/ProductServiceTest.java