@@ -142,8 +142,21 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
+<!--        <plugin>-->
+<!--          <groupId>org.apache.maven.plugins</groupId>-->
+<!--          <artifactId>maven-surefire-plugin</artifactId>-->
+<!--          <version>${maven-surefire-plugin.version}</version>-->
+<!--          <configuration>-->
+<!--            <argLine>-XX:+EnableDynamicAgentLoading</argLine>-->
+<!--          </configuration>-->
+<!--        </plugin>-->
+<!--        спросить  про ошибку WARNING: A Java agent has been loaded dynamically-->
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+          </configuration>
+<!--          спросить про ошибку, попробовал бы -->
           <version>2.22.1</version>
         </plugin>
         <plugin>
